<resources>
    <string name="app_name">My Hospital</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_profile">Profile</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="title_activity_ambulance">Ambulance</string>
    <string name="title_activity_aboutus">AboutusAct</string>
    <string name="title_activity_bloodbank1">Bloodbank1</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="title_activity_appointment">Appointment</string>
    <string name="title_activity_admin_blood">AdminBlood</string>
    <string name="ambulance_details">Ambulance Details</string>

    <string-array name="names">
        <item>Hamesh Khanna</item>
        <item>Umesh Dangol</item>
        <item>Som GC</item>
        <item>Megha Rai</item>
        <item>Om BK</item>
        <item>Uma Pradhan</item>
        <item>Lal Singh</item>
        <item>Harka Sai</item>
        <item>Raj Rai</item>
        <item>Rajendra Shah</item>
        <item>Hari Gurung</item>
        <item>Rabin Sharma</item>


    </string-array>

    <string-array name="times">
        <item>2 PM</item>
        <item>3 PM</item>
        <item>4 PM</item>
        <item>5 PM</item>
        <item>6 PM</item>

    </string-array>

</resources>